- Added bcmath to drupal7, drupal8 and wordpress builds

v1.3.5
======
- Added PHP soap extension to wordpress and drupal images

v1.4.0
======
- Removed dependency on official Wordpress image (which was over-complex)
- General cleanup of images and entrypoints
- Drupal7 and Drupal8 now self-install on start
- Wordpress minor version update to 5.7.1
- NGINX cloudflare IPV4 addresses now self-update on build
- NGINX logs access/error to stdout now too

v1.4.1
======
- Updated drupal 7 to 7.80
- Updated drupal 8 to 8.9.14

v1.4.2
======
- Permissions now set in background in Wordpress/Drupal
- Rebuild only, no code changes

v1.4.3
======
- Added Drupal9 image
- Added SSH image
- Cleaned up examples
- Updated virus scanning script in NGINX
- Removed restingclam image, now in seperate repo
- Added patch for Redmine attachment model to enable virus scanning
- Updated Drupal to 8.9.16
- Removed additional permissions script run (on upgrade) from Drupals

v1.4.4
======
- Increased max_input_vars for Drupals
- Added memory_limit and error_logging config to wordpress
- Updated SSH container so that user can sudo
- Upgraded Wordpress from 5.7.1 to 5.7.2

v1.4.5
======
- Added WORDPRESS_CONFIG_EXTRA environment variable for extra wp-config config
- Change body limit to 100mb in nginx, php and modsecurity

v1.4.6
======
- Various SSH image developments
- Upgraded Drupal 9 to 9.2.0
- CVE-2021-33560 found in NGINX by Trivy
- Added permissions scripts to SSH image
- Reference full qualified path to entrypoint in wordpress

v1.4.7
======
- Added nano to SSH image
- Fixed SFTP access to SSH image
- Updated Drupal from 7.80 to 7.82
- Updated Drupal from 9.20 to 9.2.2
- Updated Drupal 8 to 8.9.17

v1.4.8 (latest)
======
- Added composer to SSH image
- Added php xml extension to SSH image
- Variablized webroot in nginx-modsec so that it can be customized
- Set error.html permissions explicitly in nginx-modsec image
- Drupal9 now proper composer install