@@ -1,4 +1,6 @@
-FROM alpine:3.12
+ARG BOOTSTRAP
+
+FROM ${BOOTSTRAP}
 
 ENV USER=encirsh
 ENV UID=10022
@@ -12,41 +14,10 @@ RUN apk --update add --no-cache \
     openssh \
     git \
     bash \
-    icu-dev \
-    libxml2-dev \
     coreutils \
-    freetype-dev \
-    libjpeg-turbo-dev \
-    libpng-dev \
-    libzip-dev \
     openssh-server-pam \
     openssh-sftp-server \
     shadow \
-    php \
-    php-bcmath \
-    php-soap \
-    php-cli \
-    php-common \
-    php-mysqli \
-    php-curl \
-    php-gd \
-    php-intl \
-    php-bz2 \
-    php-json \
-    php-tidy \
-    php-mbstring \
-    php-phar \
-    php-iconv \
-    php-pdo \
-    php-pdo_mysql \
-    php-opcache \
-    php-session \
-    php-tokenizer \
-    php-xml \
-    php-zip \
-    php7-dom \
-    postgresql-dev \
-    mysql-client \
     curl \
  && rm -rf /var/cache/apk/*
 
@@ -68,8 +39,7 @@ RUN adduser \
     --uid "${UID}" \
     ${USER}
 
-RUN addgroup -g 10013 www-data \
- && usermod -aG 10013 "${USER}" \
+RUN usermod -aG 10013 "${USER}" \
  && apk del shadow
 
 # passwordless sudo
@@ -83,31 +53,6 @@ RUN rm -f /sbin/apk; \
     rm -rf /lib/apk; \
     rm -rf /usr/share/apk; \
     rm -rf /var/lib/apk;
-
-# composer
-RUN set -eux; \
-  php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"; \
-  echo "${COMPOSER_MD5} *composer-setup.php" | md5sum -c -; \
-  php composer-setup.php --install-dir=/usr/local/bin --filename=composer --quiet \
-    && rm composer-setup.php;
-
-# drush
-RUN composer global require drush/drush:~10
-USER encirsh
-RUN composer global require drush/drush:~10
-USER root
-
-# wp cli
-RUN cd /tmp && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
- && mv /tmp/wp-cli.phar /usr/local/bin/wp \
- && chmod 750 /usr/local/bin/wp \
- && chown root:"${UID}" /usr/local/bin/wp
-
-# permissions scripts
-COPY scripts/drupal/permissions.sh /usr/local/bin/permissions-drupal.sh
-COPY scripts/drupal9/permissions.sh /usr/local/bin/permissions-drupal9.sh
-COPY scripts/wordpress/permissions.sh /usr/local/bin/permissions-wordpress.sh
-RUN chmod 750 /usr/local/bin/permissions*.sh
 
 EXPOSE 10022
 
