@@ -303,3 +303,4 @@ v1.4.8 (latest)
 - Variablized webroot in nginx-modsec so that it can be customized
 - Set error.html permissions explicitly in nginx-modsec image
 - Drupal9 now proper composer install
+- Bootstrap SSH to existing image to bring across all tooling
